--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no" />
   <link rel="shortcut icon" href="favicon.ico" />
-
 </head>
-<body class="font-hei" ontouchstart="">
+<body class="font-hei">
   <div id="container"></div>
-  <script type="text/javascript" src="http://localhost:8080/dist/vendor.js"></script>
-  <script type="text/javascript" src="http://localhost:8080/dist/index.js"></script></body>
-</body>
+<script type="text/javascript" src="./dist/vendor.9a46d5c0.js"></script><script type="text/javascript" src="./dist/index.js"></script></body>
 </html>
