--- a/src/html/index_dev.html
+++ b/src/html/index_dev.html
@@ -7,7 +7,7 @@
 </head>
 <body class="font-hei" ontouchstart="">
   <div id="container"></div>
-  <script type="text/javascript" src="http://localhost:8080/dist/vendor.js"></script>
-  <script type="text/javascript" src="http://localhost:8080/dist/index.js"></script></body>
+  <script type="text/javascript" src="./dist/vendor.js"></script>
+  <script type="text/javascript" src="./dist/index.js"></script></body>
 </body>
 </html>
