修改评论 友言

--- a/src/html/index_dev.html
+++ b/src/html/index_dev.html
@@ -8,6 +8,8 @@
 <body class="font-hei" ontouchstart="">
   <div id="container"></div>
   <script type="text/javascript" src="./dist/vendor.js"></script>
-  <script type="text/javascript" src="./dist/index.js"></script></body>
+  <script type="text/javascript" src="./dist/index.js"></script>
+   <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2142672"></script>
+  
 </body>
 </html>
