--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body class="font-hei">
   <div id="container"></div>
+  <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2142672"></script>
 <script type="text/javascript" src="./dist/vendor.9a46d5c0.js"></script><script type="text/javascript" src="./dist/index.js"></script></body>
 </html>
