--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,6 @@
 </head>
 <body class="font-hei">
   <div id="container"></div>
-  <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2142672"></script>
+  <script type="text/javascript" src="./comment.js?uid=2142672"></script>
 </body>
 </html>
