--- a/src/html/index_dev.html
+++ b/src/html/index_dev.html
@@ -9,7 +9,7 @@
   <div id="container"></div>
   <script type="text/javascript" src="./dist/vendor.js"></script>
   <script type="text/javascript" src="./dist/index.js"></script>
-   <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2142672"></script>
+   <script type="text/javascript" src="./comment.js?uid=2142672"></script>
   
 </body>
 </html>
